test/cmdlineTests/too_long_line_edge_in.sol.err

Warning: Source file does not specify required compiler version!

 --> too_long_line_edge_in.sol:1:1: Source file does not specify required compiler version!
  |
0 | contract C {
  | ^ (Relevant source part starts here and spans across multiple lines).

Error: Identifier not found or not unique.
 --> too_long_line_edge_in.sol:2:36: Identifier not found or not unique.
  |
1 |    function ffffffffffffffffffffff(announcementTypeTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT Ty, string A) onlyOwner external {
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
